- Version 1.0.8 - Additional mobile layout corrections - Create the button to call for the panel on mobiles and desktop also

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -122,7 +122,7 @@ $UIGap: 0.5em;
 }
 
 .emoticons-mobile-toggle {
-  position: absolute !important;
+  position: fixed !important;
   bottom: 5em !important;
   right: -2px !important;
   transform: translateY(-50%) !important;
@@ -144,8 +144,11 @@ $UIGap: 0.5em;
 @media screen and (max-width: 1200px) {
   .emoticons-popup {
     width: 100%;
-    max-height: 380px;
     top: 0;
+
+    .emoticon-buttons {
+      height: 40vh;
+    }
   }
 }
 
@@ -153,20 +156,16 @@ $UIGap: 0.5em;
   .emoticons-popup {
     display: flex;
     flex-direction: row;
-    max-height: 410px;
 
     .header-buttons {
       flex-direction: column;
       justify-content: flex-start;
 
-      .close-button {
+      .close-button,
+      .clear-button {
         display: none;
       }
-
-      .clear-button {
-        order: 1;
-      }
-
+       
       button {
         width: 40px !important;
         height: 40px !important;
@@ -179,7 +178,6 @@ $UIGap: 0.5em;
 
       .category-buttons {
         flex-direction: column;
-        order: 2;
 
         .category-button {
           font-size: 1.2em;
@@ -191,6 +189,8 @@ $UIGap: 0.5em;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      height: 40vh;
+      min-height: 320px;
 
       .emoticon-button {
         min-height: 40px;
